argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s1-75d12771-argocd-argoapp-argocd-server-80-d0b58ef1":"UNHEALTHY","k8s1-75d12771-kube-system-default-http-backend-80-442a722b":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-vau2spzg-argocd-argoapp-argocd-server-2uxl67gy
    ingress.kubernetes.io/target-proxy: k8s2-tp-vau2spzg-argocd-argoapp-argocd-server-2uxl67gy
    ingress.kubernetes.io/url-map: k8s2-um-vau2spzg-argocd-argoapp-argocd-server-2uxl67gy
    meta.helm.sh/release-name: argoapp
    meta.helm.sh/release-namespace: argocd
  creationTimestamp: "2023-01-06T11:07:49Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argoapp
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    helm.sh/chart: argo-cd-5.13.8
spec:
  rules:
  - host: argocd.vettom.uk
    http:
      paths:
      - backend:
          service:
            name: argoapp-argocd-server
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 34.117.125.192
